--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kayra</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Hey moromou</h1>
+    <div class="container">
+        <section class="pageOne">
+            <h1 data-shadow='kayra'>kayra</h1>
+        </section>
+        <section class="pageTwo">
+            <h1>be</h1>
+        </section>
+        <section class="pageThree">
+            <h1>completed</h1>
+        </section>
+        <section class="pageFour">
+            <h1><i>kayra bahadirrrr</i></h1>
+        </section>
+    </div>
 </body>
 </html>
