--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <section class="pageOne">
             <h1>to</h1>
+            <h2><br>(scroll down)</h2>
         </section>
         <section class="pageTwo">
             <h1>be</h1>
@@ -18,7 +19,7 @@
             <h1>completed</h1>
         </section>
         <section class="pageFour">
-            <h1><i>kayra bahadirrrr</i></h1>
+            <h1><i>kayra bahadIrrrr,</i></h1>
         </section>
     </div>
 </body>
