--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
         <h3 id="text"> <span class="arrow">&gt;</span> let's create</h3>
         <div class="footer">
           <div class="column1">
-            <ul>
-              <li>KAYRABAHADIR8@GMAIL.COM</li>
-              <li onclick="location.href = 'https://www.linkedin.com/in/kayrabahadir/'; target= '_blank'; rel='noopener noreferrer';">LINKEDIN</li>
-              <li onclick="location.href = 'https://open.spotify.com/show/5OTkbnaEOdkEvciSiOzfg9?si=a3d0db79c2444e7b'; target= '_blank'; rel='noopener noreferrer';">KAYRAVISION</li>
-              <li>TO_BE_COMPLETED*</li>
-            </ul>
+            <div class="flex-container">
+                <li>KAYRABAHADIR8@GMAIL.COM</li>
+                <li onclick="location.href = 'https://www.linkedin.com/in/kayrabahadir/'; target= '_blank'; rel='noopener noreferrer';">LINKEDIN</li>
+                <li onclick="location.href = 'https://open.spotify.com/show/5OTkbnaEOdkEvciSiOzfg9?si=a3d0db79c2444e7b'; target= '_blank'; rel='noopener noreferrer';">KAYRAVISION</li>
+                <li>TO_BE_COMPLETED*</li>
+            </div>
           </div>
         </div>
-      </div>
       <script type="module" src="main.js"></script>
       <script type="module" src="three.js"></script>
     </div>
