--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <title>KAYRA BAHADIR</title>
     <script type="module" src="main.js"></script>
+    <link href="https://fonts.cdnfonts.com/css/neue-haas-grotesk-display-pro" rel="stylesheet">
   </head>
   <body>
     <div id="app">
+      <div id="invertedCursor1"></div>
+      <div id="invertedCursor2"></div>
       <div class="pageOne">
-        <h1>Kayra<br>Bahad&#x131;r</h1>
+        <h1>Kayra Bahad&#x131;r<br></h1>
         <h3 id="text"> <span class="arrow">&gt;</span> let's create</h3>
         <div class="footer">
           <div class="column1">
@@ -22,6 +25,9 @@
                 <li>TO_BE_COMPLETED*</li>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="pageTwo">
         </div>
       <script type="module" src="main.js"></script>
       <script type="module" src="three.js"></script>
